crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__mode_value.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "expr": {
        "domain": {
          "type": "out_refs"
        },
        "expr": {
          "name": "target.parent",
          "type": "projection"
        }
      },
      "type": "mode"
    },
    "op": "eq",
    "raw": "mode(out_refs, target.parent) = source.parent",
    "rhs": {
      "name": "source.parent",
      "type": "projection"
    },
    "type": "atom"
  }
}
