crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__moniker_descendant.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "name": "moniker",
      "type": "attr"
    },
    "op": "descendant_of",
    "raw": "moniker <@ code+moniker://./class:Foo",
    "rhs": {
      "segments": {
        "project": ".",
        "segments": [
          {
            "kind": "class",
            "name": "Foo"
          }
        ]
      },
      "type": "moniker"
    },
    "type": "atom"
  }
}
