crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__not_and_precedence.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "nodes": [
      {
        "node": {
          "lhs": {
            "name": "name",
            "type": "attr"
          },
          "op": "eq",
          "raw": "name = 'X'",
          "rhs": {
            "type": "string",
            "value": "X"
          },
          "type": "atom"
        },
        "type": "not"
      },
      {
        "lhs": {
          "expr": {
            "name": "lines",
            "type": "projection"
          },
          "type": "number"
        },
        "op": "le",
        "raw": "lines <= 10",
        "rhs": {
          "expr": {
            "type": "literal",
            "value": 10.0
          },
          "type": "number"
        },
        "type": "atom"
      }
    ],
    "type": "and"
  }
}
