crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__numeric_projection_rhs.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "expr": {
        "name": "lines",
        "type": "projection"
      },
      "type": "number"
    },
    "op": "le",
    "raw": "lines <= depth",
    "rhs": {
      "expr": {
        "name": "depth",
        "type": "projection"
      },
      "type": "number"
    },
    "type": "atom"
  }
}
