crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__numeric_regex_op.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `lines =~ foo`: number expressions only accept numeric operators, got RegexMatch",
  "input": "lines =~ foo"
}
