crates/cli/src/check/expr/snapshots/code_moniker_cli__check__expr__snapshots__or_combination.snap
---
source: crates/cli/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "nodes": [
      {
        "lhs": {
          "name": "name",
          "type": "attr"
        },
        "op": "eq",
        "raw": "name = 'Foo'",
        "rhs": {
          "type": "string",
          "value": "Foo"
        },
        "type": "atom"
      },
      {
        "lhs": {
          "name": "name",
          "type": "attr"
        },
        "op": "eq",
        "raw": "name = 'Bar'",
        "rhs": {
          "type": "string",
          "value": "Bar"
        },
        "type": "atom"
      }
    ],
    "type": "or"
  }
}
